# gdrive-helper

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gdrive_helper/: __init__.py  __main__.py  auth.py  cli.py  uploader.py
